[gd_scene load_steps=11 format=3 uid="uid://bvmpi7obayaji"]

[ext_resource type="Script" path="res://scenes/tiles/content_block.gd" id="1_gp5hw"]
[ext_resource type="Texture2D" uid="uid://cqe6b0ibn8fgg" path="res://assets/textures/tiles.png" id="1_k5tbx"]
[ext_resource type="AudioStream" uid="uid://c8btas6b0427k" path="res://assets/sounds/blocks/bump.wav" id="3_8uxgf"]
[ext_resource type="AudioStream" uid="uid://btnyk5k65mj6m" path="res://assets/sounds/blocks/contents.wav" id="4_7rgi0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0gojf"]
atlas = ExtResource("1_k5tbx")
region = Rect2(96, 32, 16, 16)

[sub_resource type="Animation" id="Animation_cxk3n"]
length = 0.001

[sub_resource type="Animation" id="Animation_36knn"]
resource_name = "bumped"
length = 0.266
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133, 0.266),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("collision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133, 0.266),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -6), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xicxp"]
_data = {
"RESET": SubResource("Animation_cxk3n"),
"bumped": SubResource("Animation_36knn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6b8lm"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fg3tb"]
size = Vector2(16, 1)

[node name="content_block" type="AnimatableBody2D"]
z_index = 2
collision_mask = 15
script = ExtResource("1_gp5hw")

[node name="sprite" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_0gojf")

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xicxp")
}

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6b8lm")

[node name="bump" type="Area2D" parent="."]
position = Vector2(0, 0.1)
collision_mask = 10

[node name="shape" type="CollisionShape2D" parent="bump"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_fg3tb")

[node name="channels" type="Node" parent="."]

[node name="bump_sound" type="AudioStreamPlayer2D" parent="channels"]
position = Vector2(0, 0.1)
stream = ExtResource("3_8uxgf")
bus = &"Sound Effect"

[node name="contents_sound" type="AudioStreamPlayer2D" parent="channels"]
stream = ExtResource("4_7rgi0")
bus = &"Sound Effect"

[connection signal="body_entered" from="bump" to="." method="_on_bump_body_entered"]
